--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "file-saver": "^2.0.5",
+    "html2canvas-pro": "^1.5.10",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
@@ -36,7 +39,8 @@
     "react-router-dom": "^7.5.2",
     "shadcn": "^2.5.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
