--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "^19.0.0",
